--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -36,7 +36,11 @@
 <iframe src="https://embed.spotify.com/?uri=spotify:track:0ShZidyBdeUF00b4ontvom" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
 
 <!-- http://es.slideshare.net/txipi/las-nuevas-api-de-audio-en-html5# -->
-<%= button_to('Comment', new_instrument_song_comment_path(@instrument.slug, @song.slug), method: :get) %>
+<% if @comments.empty? %>
+	<%= button_to('Be the first to comment!', new_instrument_song_comment_path(@instrument.slug, @song.slug), method: :get) %>
+<% else %>
+	<%= button_to('Comment', new_instrument_song_comment_path(@instrument.slug, @song.slug), method: :get) %>
+<% end %>
 
 <% @comments.each do |comment| %>
 <div style="border: 1px solid black">
