Finally, adding images works

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -21,7 +21,7 @@
       <%= text_area_tag(:midi_link,"", placeholder:"Midi link...") %>
 
     <label for="file">File to Upload</label>
-       <%= f.file_field "music_sheet" %>
+       <%= f.file_field "music_sheets" %>
 
 
     <%= f.submit("Create song") %>
