--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -31,6 +31,5 @@
 </div>
 </div>
 
-<embed src="/flash/clockdig.swf" width="160" height="40" play="true" 
-loop="true" quality="high" > 
+<embed src="/flash/clockdig.swf"  class="clock" width="160" height="40" play="true"  loop="true" quality="high" > 
 </embed> 
