--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -55,7 +55,6 @@ body {
 	z-index: 			-100;
 	background-size: 	100%;
 	background-color: 	#D0EEED;
-	overflow: hidden;
 
 }
 .body {
@@ -66,8 +65,7 @@ body {
 	margin-left: 		20px;
 	margin-top: 		50px;
 	padding-bottom:		30px;
-	overflow: 			auto;
-	overflow-x: 		hidden;
+
 
 }
 
@@ -79,8 +77,7 @@ body {
 	margin-left: 		20px;
 	margin-top: 		50px;
 	padding-bottom:		30px;
-	overflow: 			auto;
-	overflow-x: 		hidden;
+
 
 }
 
@@ -92,19 +89,17 @@ body {
 	margin-left: 		20px;
 	margin-top: 		50px;
 	padding-bottom:		30px;
-	overflow: 			auto;
-	overflow-x: 		hidden;
+
 }
-.body4{
+/*.body4{
 	width:				45%;
 	height: 			600px;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius:		10px;
 	margin-left: 		20px;
 	margin-top: 		50px;
-	padding-bottom:		30px;
-	overflow: 			auto;
-	overflow-x: 		hidden;
+	padding-bottom:		30px;*/
+
 }
 .body5{
 	width:				40%;
@@ -114,10 +109,34 @@ body {
 	margin-left: 		20px;
 	margin-top: 		50px;
 	padding-bottom:		30px;
-	overflow: 			auto;
-	overflow-x: 		hidden;
+
 
 }
+
+.body6{
+	width:				40%;
+	height: 			600px;
+	background-color: rgba(255, 255, 255, 0.5);
+	border-radius:		10px;
+	margin-left: 		20px;
+	margin-top: 		50px;
+	padding-bottom:		30px;
+
+
+}
+
+.body7{
+	width:				40%;
+	height: 			600px;
+	background-color: rgba(255, 255, 255, 0.5);
+	border-radius:		10px;
+	margin-left: 		20px;
+	margin-top: 		50px;
+	padding-bottom:		30px;
+
+
+}
+
 .found_songs{
 	margin-top: 10%;
 }
@@ -158,34 +177,46 @@ input {
 
 }
 #song_title{
-	width: 			90%;
-	margin-left: 	4%;
+	width: 				90%;
+	margin-left: 		4%;
 
 }
 
 #songwriter {
-	width:			 90%;
-	margin-left: 	4%;
+	width:			 	90%;
+	margin-left: 		4%;
 }
 
 #user_email{
-	width:			 90%;
-	margin-left: 	4%;
+	width:			 	200%;
+	margin-left: 		4%;
 
 }
 #user_password{
-	width:			 90%;
-	margin-left: 	4%;
+	width:			 	150%;
+	margin-left: 		4%;
 }
 
 #user_password_confirmation{
-	width:			 90%;
-	margin-left: 	4%;
+	width:			 	150%;
+	margin-left: 		4%;
 }
 
 #user_current_password{
-	width:			 90%;
-	margin-left: 	4%;
+	width:			 	90%;
+	margin-left: 		4%;
+}
+
+#user_email.sign{
+	width:				90%;
+}
+
+#user_password.sign{
+	width: 				50%;
+}
+
+#user_password_confirmation{
+	width: 				50%;
 }
 
 #instrument_name {
@@ -195,9 +226,9 @@ input {
 .instrument_button {
 	/*padding-left: 700px;*/
 	border-radius: 		10px;
-}
+	}
 .instrument_img{
-	min-height: 120px;
+	min-height: 		120px;
 	-webkit-filter: drop-shadow(5px 5px 20px rgba(0,0,0,1));
 	filter: url(shadow.svg#drop-shadow);
 }
@@ -269,6 +300,7 @@ a.home:hover {
 .topbarlogo{
 	float: 				left;
 	padding-left: 		10px;
+	color: 				white;
 	
 
 }
@@ -280,4 +312,8 @@ a.home:hover {
 .logo {
 	width: 30%;
 	margin-top: 10%;
+}
+.clock {
+	position: fixed;
+	float: right;
 }
