--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,16 +19,25 @@
            
         <% else %>
         <%= link_to'Home', root_path, method: :get, class: 'home' %> |
-          <%= link_to "Register", new_user_registration_path, html_options = {class: "login"} %> |
-          <%= link_to "Login", new_user_session_path, class: "login" %> 
+          <%= link_to "Register", '#', class: "login", data: {:'reveal-id' => 'registerModal'}, :id => 'modal2'%> |
+          <%= link_to "Login", '#', class: "login", data: {:'reveal-id' => 'loginModal'}, :id => 'modal' %> 
            
         <% end %>
-
-        
+          <div id="registerModal" class="reveal-modal medium" data-reveal>
+              <%= render file: '/devise/registrations/new' %>
+          </div>
+              
+          <div id="loginModal" class="reveal-modal medium" data-reveal>
+            <%= render file: '/devise/sessions/new' %>
+            <a class="close-reveal-modal">&#215;</a>
+          </div>
       </div>
-      <span class="topbarlogo"> MusicApp&reg;, developed with love and patience </span>
 
+              <span class="topbarlogo"> MusicApp&reg;, developed with love and patience </span>
       </div>
+
+
+      
 
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, id: "flash_#{name}" %>
