--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,15 @@
 <div class="body7 small-offset-3 columns">
-	<div class="row">		
-		<div class="small-8  columns">
-			<h1><%= @instrument.name.capitalize %> songs</h1>
+  <div class="row">		
+    <div class="small-8  columns">
+	  <h1><%= @instrument.name.capitalize %> songs</h1>
+		    <%= search_form_for @q do |f| %>
+			  <%= f.label :title %>
+			  <%= f.search_field :title %>
+			  <%= f.label :songwriter %>
+			  <%= f.search_field :songwriter %>
+			  <%= f.submit %>
+			<% end %>
+
 			<%= form_tag({controller: "songs", action: "found_songs"}, {method: :post}) do %>
 				<%= text_area_tag(:title,"", placeholder: "Buscar canción", size: "24x6") %>
 				<%= submit_tag("Submit") %>
