--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -281,7 +281,7 @@ a.home:hover {
 	/*no se si dar estilo o no
 	a la barra de navegación*/
 	float: right;
-	padding-right: 10px;
+	padding-right: 20px;
 }
 
 
@@ -289,7 +289,7 @@ a.home:hover {
 	z-index: 		10;
 	color: 			white !important;
 	width: 			100%;
-	height: 		40px;
+	height: 		70px;
 	top: 			0;
 	position: 		fixed;
 	background: 	#7B8282; 
@@ -304,16 +304,27 @@ a.home:hover {
 	
 
 }
-.home {
-	background-image: url(/images/home.png);
+.img_home {
+	height: 			25px;
+	width: 				25px;
+	
     
 
 }
 .logo {
-	width: 30%;
-	margin-top: 10%;
+	width: 				30%;
+	margin-top: 		10%;
 }
 .clock {
-	position: fixed;
-	float: right;
+	position: 			fixed;
+	float: 				right;
+}
+
+.icon-bar>*:hover{
+
+}
+
+.icon-bar{
+	background-color: #7B8282;
+	width: 30% !important;
 }
