--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
   <!-- <div class="body"> -->
     <div id="container">
-    <div class="topbar">
-      <div id="user_nav">
+    <div class="topbar ">
+      <div id="user_nav" class="icon-bar three-up">
         <% if user_signed_in? %>
           Logged in as <strong><%= current_user.email %></strong>.
           <%= link_to'Home', root_path, method: :get, class: 'home' %> |
@@ -18,9 +18,11 @@
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %> 
            
         <% else %>
-        <%= link_to'Home', root_path, method: :get, class: 'home' %> |
-          <%= link_to "Register", '#', class: "login", data: {:'reveal-id' => 'registerModal'}, :id => 'modal2'%> |
-          <%= link_to "Login", '#', class: "login", data: {:'reveal-id' => 'loginModal'}, :id => 'modal' %> 
+        <%= link_to image_tag(('/images/fi-home.png'), class: 'img_home'), root_path, method: :get, class: 'home item' %> |
+
+          <%= link_to "Register", '#', class: "login item", data: {:'reveal-id' => 'registerModal'}, :id => 'modal2'%> |
+
+          <%= link_to "Login", '#', class: "login item", data: {:'reveal-id' => 'loginModal'}, :id => 'modal' %> 
            
         <% end %>
           <div id="registerModal" class="reveal-modal medium" data-reveal>
@@ -33,7 +35,7 @@
           </div>
       </div>
 
-              <span class="topbarlogo"> MusicApp&reg;, developed with love and patience </span>
+              <!-- <span class="topbarlogo"> MusicApp&reg;, developed with love and patience </span> -->
       </div>
 
 
