--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
 <body>
   <!-- <div class="body"> -->
     <div id="container">
-    <div class="topbar ">
+   <!--  <div class="topbar "> -->
       <div id="user_nav" class="icon-bar three-up">
         <% if user_signed_in? %>
-          Logged in as <strong><%= current_user.email %></strong>.
-          <%= link_to'Home', root_path, method: :get, class: 'home' %> |
+          Logged in as <span><%= current_user.email %></span>.
+          <%= link_to image_tag(('/images/fi-home.png'), class: 'img_home'), root_path, method: :get, class: 'home' %> |
           <%= link_to 'Edit profile', edit_user_registration_path, html_options = {class: "login"} %> |
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %> 
            
@@ -36,7 +36,7 @@
       </div>
 
               <!-- <span class="topbarlogo"> MusicApp&reg;, developed with love and patience </span> -->
-      </div>
+<!--       </div> -->
 
 
       
