--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,30 +1,32 @@
-<%= form_tag(controller: "songs", action: "edit", method: "post") do %>
-	<%= text_field_tag(:song_title,"", placeholder:"Change song title...", size: "24x6") %>
-	<% @categories.each do |category| %>
-		<%= radio_button_tag(:song_category, category.name ) %><%= label_tag(category.name) %>
-	<% end %>	
-	<h1>Tags </h1>
-	<%= check_box(:song_tag1, "Cool", {}, 'Cool', "no") %> <%= label_tag("Cool") %>
-	<%= check_box(:song_tag2, "Hard", {}, 'Hard', "no") %> <%= label_tag("Hard") %>
-	<%= check_box(:song_tag3, "Begginer", {}, 'Begginer', "no") %> <%= label_tag("Begginer") %>
-	<%= submit_tag("Submit") %>
-	<h1> Video & URL </h1>
+<%= @song.errors.messages %>
+<div class="body3 small-offset-3 columns">
+  <h3>Song title</h3>
+    <%= form_for([@instrument, @song], multipart: true) do |f|%>
+      <%= f.text_field(:title, placeholder:"Song title...", size: "24x6") %>
+      <% @categories.each do |category| %>
+        <%= radio_button_tag(:song_category, category.name ) %><%= f.label(category.name) %>
+      <% end %>	
 
-	<% @videos.each do |video| %>
-		<li><span>
-			
-				<%= link_to(" Delete", instrument_song_path(@instrument, @song, video), method: "delete", data: {confirm: "Are you sure?"}) %> 
-			
-		</span></li>
-	<% end %>
-	<%= text_area_tag(:youtube_link,"", placeholder:"Change youtube link...") %>
-	<% @midis.each do |midi| %>
-		<li><span>
-			
-				<%= link_to(" Delete", instrument_song_path(@instrument, @song, midi), method: "delete", data: {confirm: "Are you sure?"}) %> 
-		
-		</span></li>
-	<% end %>
-	<%= text_area_tag(:midi_link,"", placeholder:"Change midi link...") %>
-<% end %>
+    <h4> Song writer </h4>	
+      <%= f.text_field(:songwriter, placeholder:"Song writer...", size: "24x6") %>
+
+    <h4>Tags</h4>
+      <% @tags.each do |tag| %>
+        <%= check_box_tag "song[tag_ids][]", tag.id, @song.tags.include?(tag) %>
+       <%= tag.name %>
+      <% end %>
+
+    <h4> Video & URL </h4>
+      <%= text_area_tag(:youtube_link,"", placeholder:"Youtube link...") %>
+      <%= text_area_tag(:midi_link,"", placeholder:"Midi link...") %>
+
+    <label for="file">File to Upload</label>
+       <%= f.file_field "music_sheets" %>
+
+
+    <%= f.submit("Edit song") %>
+
+  <% end %>
+  
+</div>
 
