--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <div id="user_nav" class="icon-bar three-up">
         <% if user_signed_in? %>
           Logged in as <span><%= current_user.email %></span>.
-          <%= link_to image_tag(('/images/fi-home.png'), class: 'img_home'), root_path, method: :get, class: 'home' %> |
+          <%= link_to image_tag(('/images/logo4.png'), class: 'img_home'), root_path, method: :get, class: 'home' %> |
           <%= link_to 'Edit profile', edit_user_registration_path, html_options = {class: "login"} %> |
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %> 
            
@@ -23,6 +23,7 @@
             <%= link_to "Register", '#', class: "login item", data: {:'reveal-id' => 'registerModal'}, :id => 'modal2'%> |
 
             <%= link_to "Login", '#', class: "login item", data: {:'reveal-id' => 'loginModal'}, :id => 'modal' %> 
+          
              
         <% end %>
          <div id="registerModal" class="reveal-modal medium" data-reveal>
