--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -10,7 +10,12 @@
     <h4> Song writer </h4>	
       <%= f.text_field(:songwriter, placeholder:"Song writer...", size: "24x6") %>
     <label for="file">File to Upload</label>
-       <%= f.file_field "music_sheets" %>
+       <%= f.file_field("asheet") %>
+       
+       <%= f.fields_for :music_sheet do |g| %>
+          <label for="file">File to Upload</label>
+          <%= g.file_field("sheet_file") %>
+       <% end %>
 
 
     <%= f.submit("Create song") %>
