--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -13,7 +13,9 @@
 			
 			<div class="spotify small-4 columns">
 					<iframe  src="https://embed.spotify.com/?uri=spotify:track:24UStI5AYA7g5ufFDh3LH0" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-				</div>
+			</div>
+
+			<%= link_to 'Sign in with Spotify', '/auth/spotify' %>
 			
 			<div class="small-6 columns">
 				 <% @videos.each do |video| %>
