--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,6 +1,6 @@
 	<script src='/assets/jquery.transit.min.js'></script>
 	<script src="/assets/toggle.js"></script>
-	<div class="body">
+<!-- 	<div class="body"> -->
 		<div class="row">
 	          <div class="small-6 small-offset-1 columns">
 				<h1><%= @song.title.capitalize %> </h1> <%= link_to("Edit me!", edit_instrument_song_path(@instrument, @song)) %>
