--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -15,7 +15,7 @@
 		<div class="row">
 			
 			<div class="spotify small-4 columns">
-					<iframe  src="https://embed.spotify.com/?uri=spotify:track:24UStI5AYA7g5ufFDh3LH0" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+					<iframe  src="https://embed.spotify.com/?uri=spotify:track:<%= @track.id %>" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
 			</div>
 
 			<%= link_to 'Sign in with Spotify', '/auth/spotify' %>
