Fixed music sheets authenticate problem

--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -170,10 +170,10 @@ button{
 	background-color: 	#D0EEED;
 }
 input {
-	background-color: 	#FFBF00; 
+	background-color: 	#3B8CC5; 
 	margin-top: 		50px;
 	border:				none;
-	color: 				#7B8282;
+	color: 				white;
 	height: 			40px;
 	border-radius: 		4px !important;
 	font-weight: 		bold;
