--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,7 +1,7 @@
 <%= @song.errors.messages %>
 <div class="body3 small-offset-3 columns">
   <h3>Song title</h3>
-    <%= form_for([:instrument, @song], multipart: true) do |f|%>
+    <%= form_for [:instrument, @song], :html => { multipart: true } do |f|%>
       <%= f.text_field(:title, placeholder:"Song title...", size: "24x6") %>
       <% @categories.each do |category| %>
         <%= radio_button_tag(:song_category, category.name ) %><%= f.label(category.name) %>
@@ -14,7 +14,7 @@
        
        <%= f.fields_for :music_sheet do |g| %>
           <label for="file">File to Upload</label>
-          <%= g.file_field("sheet_file") %>
+          <%= g.file_field "sheet_file", multiple: true %>
        <% end %>
 
 
