--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -14,10 +14,11 @@
 		
 		<div class="row">
 			
+			<% if @track %>
 			<div class="spotify small-4 columns">
 					<iframe  src="https://embed.spotify.com/?uri=spotify:track:<%= @track.id %>" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
 			</div>
-
+			<% end %>
 			<%= link_to 'Sign in with Spotify', '/auth/spotify' %>
 			
 			<div class="small-6 columns">
