--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -59,7 +59,7 @@ body {
 }
 .body {
 	width: 				96%;
-	height: 			600px;
+	height: 			80%;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius:		10px;
 	margin-left: 		20px;
@@ -70,8 +70,8 @@ body {
 }
 
 .body2 {
-	width: 42%;
-	height: 600px;
+	width: 				42%;
+	height: 			80%;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius:		10px;
 	margin-left: 		20px;
