Search per title and songwriter done

--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -25,7 +25,7 @@
     <h4> Video & URL </h4>
       <%= text_area_tag(:youtube_link,"", placeholder:"Youtube link...") %>
       <%= text_area_tag(:midi_link,"", placeholder:"Midi link...") %>
-    <%= f.submit("Create song") %>
+    <%= f.submit("Edit song") %>
 
     <% end %>
 </div>
