--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -20,7 +20,6 @@ h3 {
 	width: 			200px;
 	height: 		300px;
 	margin: 		0px;
-	margin-top: 	50px;
 	margin-left: 	40px;
 
 }
@@ -334,7 +333,7 @@ img.img_home {
 }
 
 .icon-bar{
-	background-color: 	#7B8282;
+	background-color: 		#7B8282;
 	/*width: 30% !important;*/
 }
 span {
@@ -348,3 +347,6 @@ span {
 
 }
 
+.sheetbutton:hover {
+	background-color: 		#D0EEED;
+}
