--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -11,8 +11,13 @@
       <%= f.text_field(:songwriter, placeholder:"Song writer...", size: "24x6") %>
        
        <%= f.fields_for :music_sheet do |g| %>
-          <label for="file">File to Upload</label>
+          <label for="file">Sheet to Upload</label>
           <%= g.file_field "sheet_file", multiple: true %>
+       <% end %>
+
+       <%= f.fields_for :audio do |g| %>
+          <label for="file">Audio to Upload</label>
+          <%= g.file_field "audio_file" %>
        <% end %>
 
        
@@ -23,7 +28,6 @@
 
     <h4> Video & URL </h4>
       <%= text_area_tag(:youtube_link,"", placeholder:"Youtube link...") %>
-      <%= text_area_tag(:midi_link,"", placeholder:"Midi link...") %>
     <%= f.submit("Create song") %>
 
     <% end %>
