--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -41,7 +41,7 @@
   </div>
 
   <div class="small-4 columns">
-    <button>
+    <button class="sheetbutton">
       <h1><%= link_to "Partituras", music_sheets_path(@instrument, @song) %></h1>
     </button>
   </div>	
