--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -352,3 +352,31 @@ span {
 .sheetbutton:hover {
 	background-color: 		#D0EEED;
 }
+
+.commentsbutton {
+	color: white;
+}
+
+.commentsbutton:hover {
+	font-weight: bold;
+	color: white !important;
+}
+.comments {
+	height: 				30px;
+	background-color: 		white;
+	float:					right;
+	padding-right: 			2%;
+	padding-left: 			2%;
+	border-radius: 			5px;
+	background-color: 		#3B8CC5;
+}
+
+
+.commentarea {
+	display: 				inline-block;	
+	margin-left: 			10%;
+	margin-top: 			10%;
+}
+#commentsmodal {
+	top: 0px !important;
+}
