--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
 
   <div><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off", class: 'sign' %></div>
-
+<% binding.pry %>
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
