Fix in form for in new

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,16 @@
    <!--  <div class="topbar "> -->
       <div id="user_nav" class="icon-bar three-up">
         <% if user_signed_in? %>
+          <ul class="right">
+            <li class="has-dropdown">
+              <a href="#"><%= current_user.email %></a>
+              <ul class="dropdown">
+                <li><a href="#"><%= link_to 'Edit profile', edit_user_registration_path, html_options = {class: "login"} %></a></li>
+                <li><a href="#"><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %></a></li>
+              </ul>
+            </li>
+          </ul>
+
           Logged in as <span><%= current_user.email %></span>.
           <%= link_to image_tag(('/images/logo4.png'), class: 'img_home'), root_path, method: :get, class: 'home' %> |
           <%= link_to 'Edit profile', edit_user_registration_path, html_options = {class: "login"} %> |
