--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -100,7 +100,7 @@ body {
 	padding-bottom:		30px;*/
 
 }
-.body5{
+/*.body5{
 	width:				40%;
 	height: 			600px;
 	background-color: rgba(255, 255, 255, 0.5);
@@ -110,7 +110,7 @@ body {
 	padding-bottom:		30px;
 
 
-}
+}*/
 
 .body6{
 	width:				40%;
@@ -210,15 +210,15 @@ input {
 }
 
 #user_email.sign{
-	width:				90%;
+	width:				50%;
 }
 
 #user_password.sign{
-	width: 				50%;
+	width: 				40%;
 }
 
 #user_password_confirmation{
-	width: 				100%;
+	width: 				40%;
 }
 
 #instrument_name {
@@ -373,5 +373,37 @@ span {
 	margin-top: 			10%;
 }
 #commentsmodal {
-	top: 0px !important;
+	top:					 0px !important;
+}
+
+input#title {
+	margin-top:				 20%;
+}
+
+.search {
+	margin-top: 			0px;	
+}
+
+.search2 {
+	margin-top: 			0px;
+}
+
+input#songwriter {
+	margin-top: 			10%;
+	margin-left: 			0px;
+}
+
+.ulSongs {
+	margin-top: 			10%
+}
+
+.found_songs {
+	margin-top: 			30%;	
+}
+
+.log_in {
+	margin-top: 			0px;
+}
+.sign_up {
+	margin-top: 			0px;
 }
