--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -5,11 +5,11 @@
 		    
 <%= form_tag({controller: "songs", action: "found_songs"}, {method: :post}) do %>
 	<%= text_field_tag(:title,"", placeholder: "Buscar por título", size: "24x6") %>
-	<%= submit_tag("Buscar") %>
+	<%= submit_tag("Buscar", class: 'search') %>
 <% end %>
 <%= form_tag({controller: "songs", action: "found_songs"}, {method: :post}) do %>
 	<%= text_field_tag(:songwriter,"", placeholder: "Buscar por autor", size: "24x6") %>
-	<%= submit_tag("Buscar") %>
+	<%= submit_tag("Buscar", class: 'search2') %>
 <% end %>
 			
 		</div>
@@ -17,7 +17,7 @@
 
 	<div class="row">		
 		<div class="small-12  columns">
-			<ul>
+			<ul class="ulSongs">
 			<% @songs.each do |song| %>
 				<li><span><%= link_to song.title, instrument_song_path(@instrument, song) %>
 					<% if current_user && current_user.has_role?(:admin) %>
