--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -19,11 +19,13 @@
 		<div class="small-12  columns">
 			<ul class="ulSongs">
 			<% @songs.each do |song| %>
-				<li><span><%= link_to song.title, instrument_song_path(@instrument, song) %>
-					<% if current_user && current_user.has_role?(:admin) %>
-					   <%= link_to(" Delete", instrument_song_path(@instrument, song), method: "delete", data: {confirm: "Are you sure?"}) %> 
-					<% end %>
-				 </span></li>
+		      <li><span><%= link_to song.title, instrument_song_path(@instrument, song) %><% if song.songwriter %>
+				- <%= song.songwriter %>
+				<% end %>
+				<% if current_user && current_user.has_role?(:admin) %>
+				   <%= link_to(" Delete", instrument_song_path(@instrument, song), method: "delete", data: {confirm: "Are you sure?"}) %> 
+				<% end %>
+			 </span></li>
 			<% end %>
 			</ul>
 			<%= button_to('Add song', new_instrument_song_path, method: :get) %>
