--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -100,7 +100,7 @@ body {
 	padding-bottom:		30px;*/
 
 }
-/*.body5{
+.body5 {
 	width:				40%;
 	height: 			600px;
 	background-color: rgba(255, 255, 255, 0.5);
@@ -108,9 +108,7 @@ body {
 	margin-left: 		20px;
 	margin-top: 		50px;
 	padding-bottom:		30px;
-
-
-}*/
+}
 
 .body6{
 	width:				40%;
