--- a/app/assets/stylesheets/MusicAppStyle.css
+++ b/app/assets/stylesheets/MusicAppStyle.css
@@ -16,12 +16,12 @@ h3 {
 	margin-top: 	50px;
 }
 .sheet {
-	-webkit-transition: all .5s ease-in;
+	margin-top: 100px; 
 	width: 			200px;
-	height: 		300px;
-	margin: 		0px;
-	margin-left: 	40px;
-
+	height: 		240px;
+	display: inline-block;
+	border: 2px solid black;
+	border-radius: 10%;
 }
 
 .sheet_clicked {
