Fixed style in music_sheets

--- a/app/views/songs/music_sheets.html.erb
+++ b/app/views/songs/music_sheets.html.erb
@@ -1,7 +1,7 @@
 <script src='/assets/jquery.transit.min.js'></script>
 <script src="/assets/toggle.js"></script>
 <style type="text/css">
-	img {
+	.sheet img {
 		border: 2px solid black;
 		height: 100%;
 		border-radius: 10%;
