--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,24 +11,30 @@
   <!-- <div class="body"> -->
     <div id="container">
    <!--  <div class="topbar "> -->
-      <div id="user_nav" class="icon-bar three-up">
-        <% if user_signed_in? %>
-  
-
-          Logged in as <span><%= current_user.email %></span>.
-          <%= link_to image_tag(('/images/logo4.png'), class: 'img_home'), root_path, method: :get, class: 'home' %> |
-          <%= link_to 'Edit profile', edit_user_registration_path, html_options = {class: "login"} %> |
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %> 
-           
-        <% else %>
-          <%= link_to image_tag(('/images/logo4.png'), class: 'img_home'), root_path, method: :get, class: 'home item' %> |
+        <nav class="top-bar" data-topbar role="navigation">
+          <% if user_signed_in? %>
+            <section class="top-bar-section">
+              <!-- Right Nav Section -->
+              <ul class="right">
+                <li class="has-dropdown">
+                  <a href="#"><%= current_user.email %></a>
+                  <ul class="dropdown">
+                    <li><a href="#"><%= link_to 'Edit profile', edit_user_registration_path, html_options = {class: "login"} %></a></li>
+                    <li><a href="#"><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login" %></a></li>
+                  </ul>
+                </li>
+              </ul>
+            </section>
+          <% else %>
+            <%= link_to image_tag(('/images/logo4.png'), class: 'img_home'), root_path, method: :get, class: 'home item' %> |
 
             <%= link_to "Register", '#', class: "login item", data: {:'reveal-id' => 'registerModal'}, :id => 'modal2'%> |
 
-            <%= link_to "Login", '#', class: "login item", data: {:'reveal-id' => 'loginModal'}, :id => 'modal' %> 
-          
-             
-        <% end %>
+            <%= link_to "Login", '#', class: "login item", data: {:'reveal-id' => 'loginModal'}, :id => 'modal' %>
+          <% end %>
+        </nav>
+
+
          <div id="registerModal" class="reveal-modal medium" data-reveal>
               <%= render file: '/devise/registrations/new' %>
          </div>
@@ -37,7 +43,6 @@
             <%= render file: '/devise/sessions/new' %>
             <a class="close-reveal-modal">&#215;</a>
           </div>
-      </div>
 
 
 
