When hover, a menu is displayed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,9 @@
       <%= yield %>
   
    </div> 
-  <!-- </div> 
- -->
+
+    <script>
+      $(document).foundation();
+    </script>
 </body>
 </html>
